Nueva vista cliente

--- a/client/templates/message.hbs
+++ b/client/templates/message.hbs
@@ -1,4 +1,7 @@
-<li>
-  <video class="video-container" src="{{video}}" loop autoplay></video>
-  <p>{{message}}</p>
-</li>
+<div class="row">
+    <video class="col-xs-4 video-container" src="{{video}}" loop autoplay></video>
+    <p class="col-xs-8">
+        {{message}}
+    </p>
+</div>
+<hr>
