--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,4 @@
+/*
 html, body {
   height: 100%;
   position: relative;
@@ -54,6 +55,65 @@ li p {
 footer {
   width: 100%;
   position: relative;
+}
+
+footer form {
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 5;
+  display: block;
+  position: fixed;
+  background-color: rgba(10, 10, 10, 0.8);
+}
+
+#video-preview {
+  width: 200px;
+  height: 200px;
+  background: #000;
+  bottom: 5px;
+  left: 5px;
+  position: fixed;
+  z-index: 6;
+}
+
+input[type="text"] {
+  background-color: rgba(0,0,0,0);
+  font-size: 16px;
+  margin-left: 205px;
+  padding: 10px;
+  width: 100%;
+  border: solid 0px #ccc;
+  outline: none;
+  color: #eee;
+}
+
+*/
+
+@media (min-width: 768px){
+  .sidebar {
+      position: fixed;
+      top: 51px;
+      bottom: 205px;
+      left: 0;
+      z-index: 1000;
+      display: block;
+      padding: 20px;
+      overflow-x: hidden;
+      overflow-y: auto;
+      background-color: #f5f5f5;
+      border-right: 1px solid #eee;
+  }
+}
+
+.main{
+    bottom: 205px;
+  }
+
+footer {
+  width: 100%;
+  position: relative;
+  z-index: 999999999999;
 }
 
 footer form {
