Detalles de maquetacion

--- a/client/templates/message.hbs
+++ b/client/templates/message.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-    <video class="col-xs-4 video-container" src="{{video}}" loop autoplay></video>
+    <video width="200px" class="col-xs-4 video-container" src="{{video}}" loop autoplay></video>
     <p class="col-xs-8">
         {{message}}
     </p>
